crates/bnfgen-syntax/tests/snapshots/lexical_snapshots__fixture_multibyte_string_rule.snap
---
source: crates/bnfgen-syntax/tests/lexical_snapshots.rs
---
<input>
<a> ::= "héllo wörld";
</input>
document
├── tokens
│   ├── 000..001 LAngle <
│   ├── 001..002 Id a
│   ├── 002..003 RAngle >
│   ├── 003..004 Whitespace  
│   ├── 004..007 Def ::=
│   ├── 007..008 Whitespace  
│   ├── 008..023 Str "héllo wörld"
│   ├── 023..024 Semi ;
│   └── 024..025 Whitespace
├── errors
├── recovery
└── rules
    └── 000..024 a
        ├── 000..003 lhs <a>
        │   └── name 001..002 a
        └── alt 008..023
            └── 008..023 Terminal "héllo wörld"
