crates/bnfgen-syntax/tests/snapshots/lexical_snapshots__fixture_re_literal.snap
---
source: crates/bnfgen-syntax/tests/lexical_snapshots.rs
---
<input>
re "[a-z]+";
</input>
document
├── tokens
│   ├── 000..002 Re re
│   ├── 002..003 Whitespace  
│   ├── 003..011 Str "[a-z]+"
│   ├── 011..012 Semi ;
│   └── 012..013 Whitespace
├── errors
│   └── 000..002 UnexpectedToken
├── recovery
│   └── 000..012 re "[a-z]+";
└── rules
