crates/bnfgen-syntax/tests/snapshots/lexical_snapshots__fixture_single_slash_is_invalid.snap
---
source: crates/bnfgen-syntax/tests/lexical_snapshots.rs
expression: render(&doc)
---
000..001 LAngle "<"
001..002 Id "a"
002..003 RAngle ">"
003..004 Whitespace " "
004..007 Def "::="
007..008 Whitespace " "
008..011 Str "\"x\""
011..012 Semi ";"
012..013 Whitespace " "
013..014 Invalid "/"
014..015 Whitespace " "
015..016 LAngle "<"
016..017 Id "b"
017..018 RAngle ">"
018..019 Whitespace " "
019..022 Def "::="
022..023 Whitespace " "
023..026 Str "\"y\""
026..027 Semi ";"
027..028 Whitespace "\n"
errors:
013..014 UnrecognizedInput
rules: 2
