crates/bnfgen-syntax/tests/snapshots/lexical_snapshots__fixture_unexpected_token_before_valid_rule.snap
---
source: crates/bnfgen-syntax/tests/lexical_snapshots.rs
snapshot_kind: text
---
<input>
<broken> ::= "bad" ) ;
<good> ::= "ok";
</input>
document
├── tokens
│   ├── 000..001 LAngle <
│   ├── 001..007 Id broken
│   ├── 007..008 RAngle >
│   ├── 008..009 Whitespace  
│   ├── 009..012 Def ::=
│   ├── 012..013 Whitespace  
│   ├── 013..018 Str "bad"
│   ├── 018..019 Whitespace  
│   ├── 019..020 RParen )
│   ├── 020..021 Whitespace  
│   ├── 021..022 Semi ;
│   ├── 022..023 Whitespace
│   ├── 023..024 LAngle <
│   ├── 024..028 Id good
│   ├── 028..029 RAngle >
│   ├── 029..030 Whitespace  
│   ├── 030..033 Def ::=
│   ├── 033..034 Whitespace  
│   ├── 034..038 Str "ok"
│   ├── 038..039 Semi ;
│   └── 039..040 Whitespace
├── diagnostics
│   ├── 019..019 Missing(RuleTerminator)
│   ├── 019..020 UnexpectedToken
│   └── 021..022 UnexpectedToken
├── recovery
│   ├── 019..020 UnexpectedToken )
│   └── 021..022 UnexpectedToken ;
└── rules
    ├── 000..018 broken [partial]
    │   ├── 000..008 lhs <broken>
    │   │   ├── name 001..007 broken
    │   │   └── closing 007..008
    │   ├── definition 009..012
    │   ├── alt 013..018 [complete]
    │   │   └── 013..018 Terminal "bad"
    │   └── terminator <missing>
    └── 023..039 good [complete]
        ├── 023..029 lhs <good>
        │   ├── name 024..028 good
        │   └── closing 028..029
        ├── definition 030..033
        ├── alt 034..038 [complete]
        │   └── 034..038 Terminal "ok"
        └── terminator 038..039
