crates/bnfgen-syntax/tests/snapshots/lexical_snapshots__fixture_unterminated_string_at_eof.snap
---
source: crates/bnfgen-syntax/tests/lexical_snapshots.rs
---
<input>
<a> ::= "unterminated</input>
document
├── tokens
│   ├── 0..1 LAngle <
│   ├── 1..2 Id a
│   ├── 2..3 RAngle >
│   ├── 3..4 Whitespace  
│   ├── 4..7 Def ::=
│   ├── 7..8 Whitespace  
│   └── 8..21 UnterminatedStr "unterminated
├── diagnostics
│   ├── 8..21 UnterminatedString
│   └── 21..21 Missing(RuleTerminator)
├── recovery
│   └── 8..21 UnterminatedString "unterminated
└── rules
    └── 0..21 a partial recovered
        ├── 0..3 lhs complete <a>
        │   ├── name 1..2 a
        │   └── closing 2..3
        ├── definition 4..7
        ├── 8..21 alt partial recovered
        │   └── 8..21 Terminal unterminated "unterminated
        └── terminator missing
