crates/bnfgen-syntax/tests/snapshots/lexical_snapshots__fixture_valid_untyped_rule.snap
---
source: crates/bnfgen-syntax/tests/lexical_snapshots.rs
snapshot_kind: text
---
<input>
<greeting> ::= "hello" <name> | "bye";
</input>
document
├── tokens
│   ├── 000..001 LAngle <
│   ├── 001..009 Id greeting
│   ├── 009..010 RAngle >
│   ├── 010..011 Whitespace  
│   ├── 011..014 Def ::=
│   ├── 014..015 Whitespace  
│   ├── 015..022 Str "hello"
│   ├── 022..023 Whitespace  
│   ├── 023..024 LAngle <
│   ├── 024..028 Id name
│   ├── 028..029 RAngle >
│   ├── 029..030 Whitespace  
│   ├── 030..031 Or |
│   ├── 031..032 Whitespace  
│   ├── 032..037 Str "bye"
│   ├── 037..038 Semi ;
│   └── 038..039 Whitespace
├── diagnostics
│   ├── 023..023 Missing(RuleTerminator)
│   ├── 030..030 Missing(Definition)
│   ├── 030..030 Missing(RuleTerminator)
│   ├── 030..031 UnexpectedToken
│   ├── 032..037 UnexpectedToken
│   └── 037..038 UnexpectedToken
├── recovery
│   ├── 030..031 UnexpectedToken |
│   ├── 032..037 UnexpectedToken "bye"
│   └── 037..038 UnexpectedToken ;
└── rules
    ├── 000..022 greeting [partial]
    │   ├── 000..010 lhs <greeting>
    │   │   ├── name 001..009 greeting
    │   │   └── closing 009..010
    │   ├── definition 011..014
    │   ├── alt 015..022 [complete]
    │   │   └── 015..022 Terminal "hello"
    │   └── terminator <missing>
    └── 023..029 name [partial]
        ├── 023..029 lhs <name>
        │   ├── name 024..028 name
        │   └── closing 028..029
        ├── definition <missing>
        └── terminator <missing>
