crates/bnfgen-syntax/tests/snapshots/lexical_snapshots__fixture_whitespace_only.snap
---
source: crates/bnfgen-syntax/tests/lexical_snapshots.rs
---
<input>
 	
</input>
document
├── tokens
│   └── 000..003 Whitespace " \t\n"
├── errors
└── rules
